parser/thrift.peg.go
package parser

//go:generate peg thrift.peg

import (
	"fmt"
	"math"
	"sort"
	"strconv"
)

const endSymbol rune = 1114112

/* The rule types inferred from the grammar are below. */
type pegRule uint8

const (
	ruleUnknown pegRule = iota
	ruleDocument
	ruleHeader
	ruleInclude
	ruleCppInclude
	ruleNamespace
	ruleNamespaceScope
	ruleDefinition
	ruleConst
	ruleTypedef
	ruleEnum
	ruleSenum
	ruleStruct
	ruleUnion
	ruleException
	ruleService
	ruleField
	ruleFieldID
	ruleFieldReq
	ruleXsdFieldOptions
	ruleXsdAttrs
	ruleFunction
	ruleFunctionType
	ruleThrows
	ruleFieldType
	ruleDefinitionType
	ruleBaseType
	ruleContainerType
	ruleMapType
	ruleSetType
	ruleListType
	ruleCppType
	ruleConstValue
	ruleDoubleConstant
	ruleExponent
	ruleIntConstant
	ruleConstList
	ruleConstMap
	ruleLiteral
	ruleIdentifier
	ruleSTIdentifier
	ruleListSeparator
	ruleLetter
	ruleDigit
	ruleIdChars
	ruleSpacing
	ruleWhitespace
	ruleLongComment
	ruleLineComment
	rulePragma
	ruleINCLUDE
	ruleCPP_INCLUDE
	ruleNAMESPACE
	ruleSMALLTALK_CATEGORY
	ruleSMALLTALK_PREFIX
	rulePHP_NAMESPACE
	ruleXSD_NAMESPACE
	ruleCONST
	ruleTYPEDEF
	ruleENUM
	ruleSENUM
	ruleSTRUCT
	ruleUNION
	ruleSERVICE
	ruleEXTENDS
	ruleEXCEPTION
	ruleONEWAY
	ruleTHROWS
	ruleCPP_TYPE
	ruleXSD_ALL
	ruleXSD_OPTIONAL
	ruleXSD_NILLABLE
	ruleXSD_ATTRS
	ruleVOID
	ruleMAP
	ruleSET
	ruleLIST
	ruleBOOL
	ruleBYTE
	ruleI8
	ruleI16
	ruleI32
	ruleI64
	ruleDOUBLE
	ruleSTRING
	ruleBINARY
	ruleSLIST
	ruleLBRK
	ruleRBRK
	ruleLPAR
	ruleRPAR
	ruleLWING
	ruleRWING
	ruleLPOINT
	ruleRPOINT
	ruleEQUAL
	ruleCOMMA
	ruleCOLON
	ruleEOT
	rulePegText
)

var rul3s = [...]string{
	"Unknown",
	"Document",
	"Header",
	"Include",
	"CppInclude",
	"Namespace",
	"NamespaceScope",
	"Definition",
	"Const",
	"Typedef",
	"Enum",
	"Senum",
	"Struct",
	"Union",
	"Exception",
	"Service",
	"Field",
	"FieldID",
	"FieldReq",
	"XsdFieldOptions",
	"XsdAttrs",
	"Function",
	"FunctionType",
	"Throws",
	"FieldType",
	"DefinitionType",
	"BaseType",
	"ContainerType",
	"MapType",
	"SetType",
	"ListType",
	"CppType",
	"ConstValue",
	"DoubleConstant",
	"Exponent",
	"IntConstant",
	"ConstList",
	"ConstMap",
	"Literal",
	"Identifier",
	"STIdentifier",
	"ListSeparator",
	"Letter",
	"Digit",
	"IdChars",
	"Spacing",
	"Whitespace",
	"LongComment",
	"LineComment",
	"Pragma",
	"INCLUDE",
	"CPP_INCLUDE",
	"NAMESPACE",
	"SMALLTALK_CATEGORY",
	"SMALLTALK_PREFIX",
	"PHP_NAMESPACE",
	"XSD_NAMESPACE",
	"CONST",
	"TYPEDEF",
	"ENUM",
	"SENUM",
	"STRUCT",
	"UNION",
	"SERVICE",
	"EXTENDS",
	"EXCEPTION",
	"ONEWAY",
	"THROWS",
	"CPP_TYPE",
	"XSD_ALL",
	"XSD_OPTIONAL",
	"XSD_NILLABLE",
	"XSD_ATTRS",
	"VOID",
	"MAP",
	"SET",
	"LIST",
	"BOOL",
	"BYTE",
	"I8",
	"I16",
	"I32",
	"I64",
	"DOUBLE",
	"STRING",
	"BINARY",
	"SLIST",
	"LBRK",
	"RBRK",
	"LPAR",
	"RPAR",
	"LWING",
	"RWING",
	"LPOINT",
	"RPOINT",
	"EQUAL",
	"COMMA",
	"COLON",
	"EOT",
	"PegText",
}

type token32 struct {
	pegRule
	begin, end uint32
}

func (t *token32) String() string {
	return fmt.Sprintf("\x1B[34m%v\x1B[m %v %v", rul3s[t.pegRule], t.begin, t.end)
}

type node32 struct {
	token32
	up, next *node32
}

func (node *node32) print(pretty bool, buffer string) {
	var print func(node *node32, depth int)
	print = func(node *node32, depth int) {
		for node != nil {
			for c := 0; c < depth; c++ {
				fmt.Printf(" ")
			}
			rule := rul3s[node.pegRule]
			quote := strconv.Quote(string(([]rune(buffer)[node.begin:node.end])))
			if !pretty {
				fmt.Printf("%v %v\n", rule, quote)
			} else {
				fmt.Printf("\x1B[34m%v\x1B[m %v\n", rule, quote)
			}
			if node.up != nil {
				print(node.up, depth+1)
			}
			node = node.next
		}
	}
	print(node, 0)
}

func (node *node32) Print(buffer string) {
	node.print(false, buffer)
}

func (node *node32) PrettyPrint(buffer string) {
	node.print(true, buffer)
}

type tokens32 struct {
	tree []token32
}

func (t *tokens32) Trim(length uint32) {
	t.tree = t.tree[:length]
}

func (t *tokens32) Print() {
	for _, token := range t.tree {
		fmt.Println(token.String())
	}
}

func (t *tokens32) AST() *node32 {
	type element struct {
		node *node32
		down *element
	}
	tokens := t.Tokens()
	var stack *element
	for _, token := range tokens {
		if token.begin == token.end {
			continue
		}
		node := &node32{token32: token}
		for stack != nil && stack.node.begin >= token.begin && stack.node.end <= token.end {
			stack.node.next = node.up
			node.up = stack.node
			stack = stack.down
		}
		stack = &element{node: node, down: stack}
	}
	if stack != nil {
		return stack.node
	}
	return nil
}

func (t *tokens32) PrintSyntaxTree(buffer string) {
	t.AST().Print(buffer)
}

func (t *tokens32) PrettyPrintSyntaxTree(buffer string) {
	t.AST().PrettyPrint(buffer)
}

func (t *tokens32) Add(rule pegRule, begin, end, index uint32) {
	if tree := t.tree; int(index) >= len(tree) {
		expanded := make([]token32, 2*len(tree))
		copy(expanded, tree)
		t.tree = expanded
	}
	t.tree[index] = token32{
		pegRule: rule,
		begin:   begin,
		end:     end,
	}
}

func (t *tokens32) Tokens() []token32 {
	return t.tree
}

type Thrift struct {
	D *Document

	Buffer string
	buffer []rune
	rules  [100]func() bool
	parse  func(rule ...int) error
	reset  func()
	Pretty bool
	tokens32
}

func (p *Thrift) Parse(rule ...int) error {
	return p.parse(rule...)
}

func (p *Thrift) Reset() {
	p.reset()
}

type textPosition struct {
	line, symbol int
}

type textPositionMap map[int]textPosition

func translatePositions(buffer []rune, positions []int) textPositionMap {
	length, translations, j, line, symbol := len(positions), make(textPositionMap, len(positions)), 0, 1, 0
	sort.Ints(positions)

search:
	for i, c := range buffer {
		if c == '\n' {
			line, symbol = line+1, 0
		} else {
			symbol++
		}
		if i == positions[j] {
			translations[positions[j]] = textPosition{line, symbol}
			for j++; j < length; j++ {
				if i != positions[j] {
					continue search
				}
			}
			break search
		}
	}

	return translations
}

type parseError struct {
	p   *Thrift
	max token32
}

func (e *parseError) Error() string {
	tokens, error := []token32{e.max}, "\n"
	positions, p := make([]int, 2*len(tokens)), 0
	for _, token := range tokens {
		positions[p], p = int(token.begin), p+1
		positions[p], p = int(token.end), p+1
	}
	translations := translatePositions(e.p.buffer, positions)
	format := "parse error near %v (line %v symbol %v - line %v symbol %v):\n%v\n"
	if e.p.Pretty {
		format = "parse error near \x1B[34m%v\x1B[m (line %v symbol %v - line %v symbol %v):\n%v\n"
	}
	for _, token := range tokens {
		begin, end := int(token.begin), int(token.end)
		error += fmt.Sprintf(format,
			rul3s[token.pegRule],
			translations[begin].line, translations[begin].symbol,
			translations[end].line, translations[end].symbol,
			strconv.Quote(string(e.p.buffer[begin:end])))
	}

	return error
}

func (p *Thrift) PrintSyntaxTree() {
	if p.Pretty {
		p.tokens32.PrettyPrintSyntaxTree(p.Buffer)
	} else {
		p.tokens32.PrintSyntaxTree(p.Buffer)
	}
}

func (p *Thrift) Init() {
	var (
		max                  token32
		position, tokenIndex uint32
		buffer               []rune
	)
	p.reset = func() {
		max = token32{}
		position, tokenIndex = 0, 0

		p.buffer = []rune(p.Buffer)
		if len(p.buffer) == 0 || p.buffer[len(p.buffer)-1] != endSymbol {
			p.buffer = append(p.buffer, endSymbol)
		}
		buffer = p.buffer
	}
	p.reset()

	_rules := p.rules
	tree := tokens32{tree: make([]token32, math.MaxInt16)}
	p.parse = func(rule ...int) error {
		r := 1
		if len(rule) > 0 {
			r = rule[0]
		}
		matches := p.rules[r]()
		p.tokens32 = tree
		if matches {
			p.Trim(tokenIndex)
			return nil
		}
		return &parseError{p, max}
	}

	add := func(rule pegRule, begin uint32) {
		tree.Add(rule, begin, position, tokenIndex)
		tokenIndex++
		if begin != position && position > max.end {
			max = token32{rule, begin, position}
		}
	}

	matchDot := func() bool {
		if buffer[position] != endSymbol {
			position++
			return true
		}
		return false
	}

	/*matchChar := func(c byte) bool {
		if buffer[position] == c {
			position++
			return true
		}
		return false
	}*/

	/*matchRange := func(lower byte, upper byte) bool {
		if c := buffer[position]; c >= lower && c <= upper {
			position++
			return true
		}
		return false
	}*/

	_rules = [...]func() bool{
		nil,
		/* 0 Document <- <(Spacing Header* Definition* EOT)> */
		func() bool {
			position0, tokenIndex0 := position, tokenIndex
			{
				position1 := position
				if !_rules[ruleSpacing]() {
					goto l0
				}
			l2:
				{
					position3, tokenIndex3 := position, tokenIndex
					if !_rules[ruleHeader]() {
						goto l3
					}
					goto l2
				l3:
					position, tokenIndex = position3, tokenIndex3
				}
			l4:
				{
					position5, tokenIndex5 := position, tokenIndex
					if !_rules[ruleDefinition]() {
						goto l5
					}
					goto l4
				l5:
					position, tokenIndex = position5, tokenIndex5
				}
				if !_rules[ruleEOT]() {
					goto l0
				}
				add(ruleDocument, position1)
			}
			return true
		l0:
			position, tokenIndex = position0, tokenIndex0
			return false
		},
		/* 1 Header <- <(Include / CppInclude / Namespace)> */
		func() bool {
			position6, tokenIndex6 := position, tokenIndex
			{
				position7 := position
				{
					position8, tokenIndex8 := position, tokenIndex
					if !_rules[ruleInclude]() {
						goto l9
					}
					goto l8
				l9:
					position, tokenIndex = position8, tokenIndex8
					if !_rules[ruleCppInclude]() {
						goto l10
					}
					goto l8
				l10:
					position, tokenIndex = position8, tokenIndex8
					if !_rules[ruleNamespace]() {
						goto l6
					}
				}
			l8:
				add(ruleHeader, position7)
			}
			return true
		l6:
			position, tokenIndex = position6, tokenIndex6
			return false
		},
		/* 2 Include <- <(INCLUDE Literal)> */
		func() bool {
			position11, tokenIndex11 := position, tokenIndex
			{
				position12 := position
				if !_rules[ruleINCLUDE]() {
					goto l11
				}
				if !_rules[ruleLiteral]() {
					goto l11
				}
				add(ruleInclude, position12)
			}
			return true
		l11:
			position, tokenIndex = position11, tokenIndex11
			return false
		},
		/* 3 CppInclude <- <(CPP_INCLUDE Literal)> */
		func() bool {
			position13, tokenIndex13 := position, tokenIndex
			{
				position14 := position
				if !_rules[ruleCPP_INCLUDE]() {
					goto l13
				}
				if !_rules[ruleLiteral]() {
					goto l13
				}
				add(ruleCppInclude, position14)
			}
			return true
		l13:
			position, tokenIndex = position13, tokenIndex13
			return false
		},
		/* 4 Namespace <- <((NAMESPACE (NamespaceScope Identifier)) / (SMALLTALK_CATEGORY STIdentifier) / (SMALLTALK_PREFIX Identifier) / (PHP_NAMESPACE Literal) / (XSD_NAMESPACE Literal))> */
		func() bool {
			position15, tokenIndex15 := position, tokenIndex
			{
				position16 := position
				{
					position17, tokenIndex17 := position, tokenIndex
					if !_rules[ruleNAMESPACE]() {
						goto l18
					}
					if !_rules[ruleNamespaceScope]() {
						goto l18
					}
					if !_rules[ruleIdentifier]() {
						goto l18
					}
					goto l17
				l18:
					position, tokenIndex = position17, tokenIndex17
					if !_rules[ruleSMALLTALK_CATEGORY]() {
						goto l19
					}
					if !_rules[ruleSTIdentifier]() {
						goto l19
					}
					goto l17
				l19:
					position, tokenIndex = position17, tokenIndex17
					if !_rules[ruleSMALLTALK_PREFIX]() {
						goto l20
					}
					if !_rules[ruleIdentifier]() {
						goto l20
					}
					goto l17
				l20:
					position, tokenIndex = position17, tokenIndex17
					if !_rules[rulePHP_NAMESPACE]() {
						goto l21
					}
					if !_rules[ruleLiteral]() {
						goto l21
					}
					goto l17
				l21:
					position, tokenIndex = position17, tokenIndex17
					if !_rules[ruleXSD_NAMESPACE]() {
						goto l15
					}
					if !_rules[ruleLiteral]() {
						goto l15
					}
				}
			l17:
				add(ruleNamespace, position16)
			}
			return true
		l15:
			position, tokenIndex = position15, tokenIndex15
			return false
		},
		/* 5 NamespaceScope <- <((<'*'> Spacing) / Identifier)> */
		func() bool {
			position22, tokenIndex22 := position, tokenIndex
			{
				position23 := position
				{
					position24, tokenIndex24 := position, tokenIndex
					{
						position26 := position
						if buffer[position] != rune('*') {
							goto l25
						}
						position++
						add(rulePegText, position26)
					}
					if !_rules[ruleSpacing]() {
						goto l25
					}
					goto l24
				l25:
					position, tokenIndex = position24, tokenIndex24
					if !_rules[ruleIdentifier]() {
						goto l22
					}
				}
			l24:
				add(ruleNamespaceScope, position23)
			}
			return true
		l22:
			position, tokenIndex = position22, tokenIndex22
			return false
		},
		/* 6 Definition <- <(Const / Typedef / Enum / Senum / Struct / Union / Service / Exception)> */
		func() bool {
			position27, tokenIndex27 := position, tokenIndex
			{
				position28 := position
				{
					position29, tokenIndex29 := position, tokenIndex
					if !_rules[ruleConst]() {
						goto l30
					}
					goto l29
				l30:
					position, tokenIndex = position29, tokenIndex29
					if !_rules[ruleTypedef]() {
						goto l31
					}
					goto l29
				l31:
					position, tokenIndex = position29, tokenIndex29
					if !_rules[ruleEnum]() {
						goto l32
					}
					goto l29
				l32:
					position, tokenIndex = position29, tokenIndex29
					if !_rules[ruleSenum]() {
						goto l33
					}
					goto l29
				l33:
					position, tokenIndex = position29, tokenIndex29
					if !_rules[ruleStruct]() {
						goto l34
					}
					goto l29
				l34:
					position, tokenIndex = position29, tokenIndex29
					if !_rules[ruleUnion]() {
						goto l35
					}
					goto l29
				l35:
					position, tokenIndex = position29, tokenIndex29
					if !_rules[ruleService]() {
						goto l36
					}
					goto l29
				l36:
					position, tokenIndex = position29, tokenIndex29
					if !_rules[ruleException]() {
						goto l27
					}
				}
			l29:
				add(ruleDefinition, position28)
			}
			return true
		l27:
			position, tokenIndex = position27, tokenIndex27
			return false
		},
		/* 7 Const <- <(CONST FieldType Identifier EQUAL ConstValue ListSeparator?)> */
		func() bool {
			position37, tokenIndex37 := position, tokenIndex
			{
				position38 := position
				if !_rules[ruleCONST]() {
					goto l37
				}
				if !_rules[ruleFieldType]() {
					goto l37
				}
				if !_rules[ruleIdentifier]() {
					goto l37
				}
				if !_rules[ruleEQUAL]() {
					goto l37
				}
				if !_rules[ruleConstValue]() {
					goto l37
				}
				{
					position39, tokenIndex39 := position, tokenIndex
					if !_rules[ruleListSeparator]() {
						goto l39
					}
					goto l40
				l39:
					position, tokenIndex = position39, tokenIndex39
				}
			l40:
				add(ruleConst, position38)
			}
			return true
		l37:
			position, tokenIndex = position37, tokenIndex37
			return false
		},
		/* 8 Typedef <- <(TYPEDEF DefinitionType Identifier)> */
		func() bool {
			position41, tokenIndex41 := position, tokenIndex
			{
				position42 := position
				if !_rules[ruleTYPEDEF]() {
					goto l41
				}
				if !_rules[ruleDefinitionType]() {
					goto l41
				}
				if !_rules[ruleIdentifier]() {
					goto l41
				}
				add(ruleTypedef, position42)
			}
			return true
		l41:
			position, tokenIndex = position41, tokenIndex41
			return false
		},
		/* 9 Enum <- <(ENUM Identifier LWING (Identifier (EQUAL IntConstant)? ListSeparator?)* RWING)> */
		func() bool {
			position43, tokenIndex43 := position, tokenIndex
			{
				position44 := position
				if !_rules[ruleENUM]() {
					goto l43
				}
				if !_rules[ruleIdentifier]() {
					goto l43
				}
				if !_rules[ruleLWING]() {
					goto l43
				}
			l45:
				{
					position46, tokenIndex46 := position, tokenIndex
					if !_rules[ruleIdentifier]() {
						goto l46
					}
					{
						position47, tokenIndex47 := position, tokenIndex
						if !_rules[ruleEQUAL]() {
							goto l47
						}
						if !_rules[ruleIntConstant]() {
							goto l47
						}
						goto l48
					l47:
						position, tokenIndex = position47, tokenIndex47
					}
				l48:
					{
						position49, tokenIndex49 := position, tokenIndex
						if !_rules[ruleListSeparator]() {
							goto l49
						}
						goto l50
					l49:
						position, tokenIndex = position49, tokenIndex49
					}
				l50:
					goto l45
				l46:
					position, tokenIndex = position46, tokenIndex46
				}
				if !_rules[ruleRWING]() {
					goto l43
				}
				add(ruleEnum, position44)
			}
			return true
		l43:
			position, tokenIndex = position43, tokenIndex43
			return false
		},
		/* 10 Senum <- <(SENUM Identifier LWING (Literal ListSeparator?)* RWING)> */
		func() bool {
			position51, tokenIndex51 := position, tokenIndex
			{
				position52 := position
				if !_rules[ruleSENUM]() {
					goto l51
				}
				if !_rules[ruleIdentifier]() {
					goto l51
				}
				if !_rules[ruleLWING]() {
					goto l51
				}
			l53:
				{
					position54, tokenIndex54 := position, tokenIndex
					if !_rules[ruleLiteral]() {
						goto l54
					}
					{
						position55, tokenIndex55 := position, tokenIndex
						if !_rules[ruleListSeparator]() {
							goto l55
						}
						goto l56
					l55:
						position, tokenIndex = position55, tokenIndex55
					}
				l56:
					goto l53
				l54:
					position, tokenIndex = position54, tokenIndex54
				}
				if !_rules[ruleRWING]() {
					goto l51
				}
				add(ruleSenum, position52)
			}
			return true
		l51:
			position, tokenIndex = position51, tokenIndex51
			return false
		},
		/* 11 Struct <- <(STRUCT Identifier XSD_ALL? LWING Field* RWING)> */
		func() bool {
			position57, tokenIndex57 := position, tokenIndex
			{
				position58 := position
				if !_rules[ruleSTRUCT]() {
					goto l57
				}
				if !_rules[ruleIdentifier]() {
					goto l57
				}
				{
					position59, tokenIndex59 := position, tokenIndex
					if !_rules[ruleXSD_ALL]() {
						goto l59
					}
					goto l60
				l59:
					position, tokenIndex = position59, tokenIndex59
				}
			l60:
				if !_rules[ruleLWING]() {
					goto l57
				}
			l61:
				{
					position62, tokenIndex62 := position, tokenIndex
					if !_rules[ruleField]() {
						goto l62
					}
					goto l61
				l62:
					position, tokenIndex = position62, tokenIndex62
				}
				if !_rules[ruleRWING]() {
					goto l57
				}
				add(ruleStruct, position58)
			}
			return true
		l57:
			position, tokenIndex = position57, tokenIndex57
			return false
		},
		/* 12 Union <- <(UNION Identifier XSD_ALL? LWING Field* RWING)> */
		func() bool {
			position63, tokenIndex63 := position, tokenIndex
			{
				position64 := position
				if !_rules[ruleUNION]() {
					goto l63
				}
				if !_rules[ruleIdentifier]() {
					goto l63
				}
				{
					position65, tokenIndex65 := position, tokenIndex
					if !_rules[ruleXSD_ALL]() {
						goto l65
					}
					goto l66
				l65:
					position, tokenIndex = position65, tokenIndex65
				}
			l66:
				if !_rules[ruleLWING]() {
					goto l63
				}
			l67:
				{
					position68, tokenIndex68 := position, tokenIndex
					if !_rules[ruleField]() {
						goto l68
					}
					goto l67
				l68:
					position, tokenIndex = position68, tokenIndex68
				}
				if !_rules[ruleRWING]() {
					goto l63
				}
				add(ruleUnion, position64)
			}
			return true
		l63:
			position, tokenIndex = position63, tokenIndex63
			return false
		},
		/* 13 Exception <- <(EXCEPTION Identifier LWING Field* RWING)> */
		func() bool {
			position69, tokenIndex69 := position, tokenIndex
			{
				position70 := position
				if !_rules[ruleEXCEPTION]() {
					goto l69
				}
				if !_rules[ruleIdentifier]() {
					goto l69
				}
				if !_rules[ruleLWING]() {
					goto l69
				}
			l71:
				{
					position72, tokenIndex72 := position, tokenIndex
					if !_rules[ruleField]() {
						goto l72
					}
					goto l71
				l72:
					position, tokenIndex = position72, tokenIndex72
				}
				if !_rules[ruleRWING]() {
					goto l69
				}
				add(ruleException, position70)
			}
			return true
		l69:
			position, tokenIndex = position69, tokenIndex69
			return false
		},
		/* 14 Service <- <(SERVICE Identifier (EXTENDS Identifier)? LWING Function* RWING)> */
		func() bool {
			position73, tokenIndex73 := position, tokenIndex
			{
				position74 := position
				if !_rules[ruleSERVICE]() {
					goto l73
				}
				if !_rules[ruleIdentifier]() {
					goto l73
				}
				{
					position75, tokenIndex75 := position, tokenIndex
					if !_rules[ruleEXTENDS]() {
						goto l75
					}
					if !_rules[ruleIdentifier]() {
						goto l75
					}
					goto l76
				l75:
					position, tokenIndex = position75, tokenIndex75
				}
			l76:
				if !_rules[ruleLWING]() {
					goto l73
				}
			l77:
				{
					position78, tokenIndex78 := position, tokenIndex
					if !_rules[ruleFunction]() {
						goto l78
					}
					goto l77
				l78:
					position, tokenIndex = position78, tokenIndex78
				}
				if !_rules[ruleRWING]() {
					goto l73
				}
				add(ruleService, position74)
			}
			return true
		l73:
			position, tokenIndex = position73, tokenIndex73
			return false
		},
		/* 15 Field <- <(FieldID? FieldReq? FieldType Identifier (EQUAL ConstValue)? XsdFieldOptions ListSeparator?)> */
		func() bool {
			position79, tokenIndex79 := position, tokenIndex
			{
				position80 := position
				{
					position81, tokenIndex81 := position, tokenIndex
					if !_rules[ruleFieldID]() {
						goto l81
					}
					goto l82
				l81:
					position, tokenIndex = position81, tokenIndex81
				}
			l82:
				{
					position83, tokenIndex83 := position, tokenIndex
					if !_rules[ruleFieldReq]() {
						goto l83
					}
					goto l84
				l83:
					position, tokenIndex = position83, tokenIndex83
				}
			l84:
				if !_rules[ruleFieldType]() {
					goto l79
				}
				if !_rules[ruleIdentifier]() {
					goto l79
				}
				{
					position85, tokenIndex85 := position, tokenIndex
					if !_rules[ruleEQUAL]() {
						goto l85
					}
					if !_rules[ruleConstValue]() {
						goto l85
					}
					goto l86
				l85:
					position, tokenIndex = position85, tokenIndex85
				}
			l86:
				if !_rules[ruleXsdFieldOptions]() {
					goto l79
				}
				{
					position87, tokenIndex87 := position, tokenIndex
					if !_rules[ruleListSeparator]() {
						goto l87
					}
					goto l88
				l87:
					position, tokenIndex = position87, tokenIndex87
				}
			l88:
				add(ruleField, position80)
			}
			return true
		l79:
			position, tokenIndex = position79, tokenIndex79
			return false
		},
		/* 16 FieldID <- <(IntConstant COLON)> */
		func() bool {
			position89, tokenIndex89 := position, tokenIndex
			{
				position90 := position
				if !_rules[ruleIntConstant]() {
					goto l89
				}
				if !_rules[ruleCOLON]() {
					goto l89
				}
				add(ruleFieldID, position90)
			}
			return true
		l89:
			position, tokenIndex = position89, tokenIndex89
			return false
		},
		/* 17 FieldReq <- <(<(('r' 'e' 'q' 'u' 'i' 'r' 'e' 'd') / ('o' 'p' 't' 'i' 'o' 'n' 'a' 'l'))> Spacing)> */
		func() bool {
			position91, tokenIndex91 := position, tokenIndex
			{
				position92 := position
				{
					position93 := position
					{
						position94, tokenIndex94 := position, tokenIndex
						if buffer[position] != rune('r') {
							goto l95
						}
						position++
						if buffer[position] != rune('e') {
							goto l95
						}
						position++
						if buffer[position] != rune('q') {
							goto l95
						}
						position++
						if buffer[position] != rune('u') {
							goto l95
						}
						position++
						if buffer[position] != rune('i') {
							goto l95
						}
						position++
						if buffer[position] != rune('r') {
							goto l95
						}
						position++
						if buffer[position] != rune('e') {
